# lazyserial

./: Cargo.toml  README.md
src/: app.rs  main.rs  serial.rs  ui.rs
