[package]
name = "setial_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.25", default-features = false, features = ["crossterm"] }
serialport = "4.3"
unicode-width = "0.1"
